<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_spent">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="result">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="total_kilometer">Total de Quilômetros</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="kilometer_per_liter">Kilômetros por litro</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>